--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,6 +5,7 @@
     <body>
         <div>
             <h1><a href="">Django Blog</a></h1>
+						<h2><a href="">Django Blog</a></h2>
         </div>
 
     {% for post in posts %}
