--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <div>
+				    <h1>Mio blog</h1>
             <h2><a href="">Django Blog</a></h2>
         </div>
 
