--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,31 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Django blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Django Blog</a></h1>
-        </div>
+<head>
+  <title>Django blog</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'css/blog.css'%}">
+  <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+</head>
+<body>
+  <div class="page-header">
+    <h1><a href="/">Django Girls Blog</a></h1>
+  </div>
 
-    {% for post in posts %}
-        <div>
-	    <p>published: {{ post.published_date }}</p>
-	    <h1><a href="">{{ post.title }}</a></h1>
-	    <p>{{ post.text|linebreaksbr }}</p>
-	</div>
-    {% endfor %}
-        
-    </body>
+  <div class="content container">
+    <div class="row">
+      <div class="col-md-8">
+        {% for post in posts %}
+        <div class="post">
+           <div class="date">
+            {{ post.published_date }}
+           </div>
+           <h1><a href="">{{ post.title }}</a></h1>
+           <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+ </body>
 </html>
